# backend/models.py
@@ -45,15 +45,16 @@ class User(db.Model):
             # 이름 전체 + '붕'
             self.nickname = self.username + "붕"
 
-'''
+
 class Message(db.Model):
     __tablename__ = "messages"
 
     memo_id = db.Column(db.Integer, primary_key=True, autoincrement=True)
     content = db.Column(db.Text, nullable=False)
-    writer_id = db.Column(db.Integer, db.ForeignKey("users.id"), nullable=False)
+    sender = db.Column(db.Integer, db.ForeignKey("users.id"), nullable=False)
     choiceType = db.Column(db.String(50), nullable=False)
     created_at = db.Column(db.DateTime, default=datetime.now)
+    receiver = db.Column(db.String(50), nullable=False)
 
     writer = db.relationship(
         "User", backref=db.backref("messages", lazy=True)
@@ -61,7 +62,6 @@ class Message(db.Model):
 
     def __repr__(self):
         return f"<Message {self.memo_id}>"
-'''
 
 # Quipu 회원 데이터베이스
 class Quipu(db.Model):
